2019-10-02  Jason Merrill  <jason@redhat.com>

	* typeck2.c (store_init_value): Only clear_cv_and_fold_caches if the
	value is constant.

2019-09-30  Jason Merrill  <jason@redhat.com>

	Use hash_map_safe_* functions.
	* constexpr.c (maybe_initialize_fundef_copies_table): Remove.
	(get_fundef_copy): Use hash_map_safe_get_or_insert.
	* cp-objcp-common.c (cp_get_debug_type): Use hash_map_safe_*.
	* decl.c (store_decomp_type): Remove.
	(cp_finish_decomp): Use hash_map_safe_put.
	* init.c (get_nsdmi): Use hash_map_safe_*.
	* pt.c (store_defaulted_ttp, lookup_defaulted_ttp): Remove.
	(add_defaults_to_ttp): Use hash_map_safe_*.

2019-09-27  Jason Merrill  <jason@redhat.com>

	* cp-tree.h (struct tree_constraint_info): Remove normalized_constr.
	(CI_NORMALIZED_CONSTRAINTS): Remove.
	* constraint.cc (normalized_map): New variable.
	(get_normalized_constraints_from_info): Remove caching code.
	(get_normalized_constraints_from_decl): Cache in normalized_map.
	(normalize_concept_definition): Likewise.

	* parser.c (cp_parser_template_introduction): Pedwarn if not
	-fconcepts-ts.

	* constexpr.c (cxx_fold_indirect_ref): Use similar_type_p.
	(cxx_eval_indirect_ref): Likewise.  Improve error location.

	* cp-tree.h (class iloc_sentinel): New.
	* decl.c (grokdeclarator, finish_enum_value_list): Use it.
	* mangle.c (mangle_decl_string): Use it.
	* pt.c (perform_typedefs_access_check): Use it.

2019-09-27  Richard Sandiford  <richard.sandiford@arm.com>

	* cp-tree.h (build_cxx_call): Take the original function decl
	as an optional final parameter.
	(cp_build_function_call_vec): Likewise.
	* call.c (build_cxx_call): Likewise.  Pass all built-in calls to
	check_builtin_function_arguments.
	* typeck.c (build_function_call_vec): Take the original function
	decl as an optional final parameter and pass it to
	cp_build_function_call_vec.
	(cp_build_function_call_vec): Take the original function
	decl as an optional final parameter and pass it to build_cxx_call.
